# secrets-server

./: Cargo.toml  Dockerfile  Makefile  README.md  aks-deploy.sh  build.rs  build.sh  configs.jsonc  package.json  secrets-server-values.yaml
apps/secrets-server/src/: api.rs  auth.rs  middleware-example.rs  old_main.rs  quote.rs  scotts_handlers.rs
apps/secrets-server/src/store/: postgres.rs
migrations/: 20231017004955_init.sql
secrets-server-chart/: configs.json  configs.jsonc  values.yaml
secrets-server-chart/templates/: deployment.yaml  ingress.yaml  service.yaml
source/: build.sh
source/lib/sgx-dcap-quoteverify-rs/: Cargo.toml
source/lib/sgx-dcap-quoteverify-sys/: Cargo.toml
source/src/: main.rs
src/: api.rs  args.rs  auth.rs  main.rs  quote.rs
src/api/: auth.rs
src/store/: mod.rs  postgres.rs
