[package]
name = "secrets-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
sgx-dcap-quoteverify-rs = { version = "0.2.0", path = "lib/sgx-dcap-quoteverify-rs"}
sgx-dcap-quoteverify-sys = { version = "0.2.0", path = "lib/sgx-dcap-quoteverify-sys" }
sgx-quote = "0.1.0"
sha2 = "0.10.6"
rsa = "0.9.2"
rand = "0.8.4"
serde_json = "1.0.96"
hex = "0.4.3"
