[package]
name = "secrets-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
all = []

[dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.74"
base64 = "0.21.5"
bs58 = "0.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
dotenvy = "0.15.7"
ed25519-dalek = "1"
ethers = "2.0.11"
hex = "0.4.3"
intel-tee-quote-verification-rs = "0.3.0"
kv-log-macro = "1.0"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std"] }
poem = { version = "1", features = ["opentelemetry"] }
poem-openapi = { version = "3", features = [
    "swagger-ui",
    "chrono",
    "uuid",
    "rust_decimal",
] }
rand = "0.8.4"
regex = "1.10.2"
rsa = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
sgx-quote = "0.1.0"
sha2 = "0.10.8"
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "time",
    "uuid",
    "json",
] }
thiserror = "1.0.49"
tokio = { version = "^1", features = ["full"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "serde_json",
] }
untrusted = "0.9.0"
